Added basic functional test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,7 +20,8 @@
          verbose="true"
 >
     <php>
-        <ini name="error_reporting" value="-1" />
+        <ini name="error_reporting" value="-1"/>
+        <server name="KERNEL_CLASS" value="\PingLocalhost\AnonymizerBundle\Functional\Fixtures\TestKernel"/>
     </php>
 
     <testsuites>
