--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,10 @@
     "autoload-dev": {
         "psr-4": {
             "PingLocalhost\\AnonymizerBundle\\": "tests"
-        }
+        },
+        "classmap": [
+            "tests/Functional/Fixtures/TestKernel.php"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
