--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -28,5 +28,5 @@
         </properties>
     </rule>
 
-    <exclude-pattern>*/Migrations/*</exclude-pattern>
+    <exclude-pattern>./tests/Functional/var/</exclude-pattern>
 </ruleset>
