--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,14 @@
     },
     "require": {
         "php": "^7.1.0",
-        "symfony/framework-bundle": "~3.4|~4.0",
+        "doctrine/annotations": "^1.4",
+        "doctrine/orm": "^2.5",
+        "fzaninotto/faker": "^1.7",
+        "jms/metadata": "^1.6",
         "symfony/console": "~3.4|~4.0",
         "symfony/dependency-injection": "~3.4|~4.0",
-        "doctrine/annotations": "^1.4",
-        "jms/metadata": "^1.6",
-        "fzaninotto/faker": "^1.7",
-        "doctrine/orm": "^2.5"
+        "symfony/framework-bundle": "~3.4|~4.0",
+        "symfony/yaml": "~3.4|~4.0"
     },
     "require-dev": {
         "hostnet/phpcs-tool": "^8.0.0",
