--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,9 @@ matrix:
           # Test the latest stable release
         - php: 7.1
         - php: 7.2
-          env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
+          env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-clover=coverage.xml"
 
-          # Test LTS versions. This makes sure we do not use Symfony packages with version greater
-          # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
+          # Test LTS versions
         - php: 7.2
           env: DEPENDENCIES="symfony/lts:^3"
 
@@ -46,5 +45,9 @@ install:
     - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
-    - composer validate --strict --no-check-lock
+    # Run all standard CI scripts
+    - composer ci
+    # Run PHPUnit
     - ./vendor/bin/phpunit $PHPUNIT_FLAGS
+    # Upload code coverage if we generated any
+    - if [[ $COVERAGE = true ]]; then bash <(curl -s https://codecov.io/bash); fi
