--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
     },
     "require": {
         "php": "^7.1.0",
-        "doctrine/annotations": "^1.4",
-        "doctrine/orm": "^2.5",
+        "doctrine/annotations": "^1.6",
+        "doctrine/common": "^2.8.0",
+        "doctrine/orm": "^2.6",
         "fzaninotto/faker": "^1.7",
         "jms/metadata": "^1.6",
         "symfony/console": "~3.4|~4.0",
@@ -35,8 +36,12 @@
     },
     "require-dev": {
         "hostnet/phpcs-tool": "^8.0.0",
-        "nyholm/symfony-bundle-test": "^1.2",
-        "phpunit/phpunit": "^7.0"
+        "jakub-onderka/php-parallel-lint": "^1.0",
+        "nyholm/symfony-bundle-test": "^1.4",
+        "phpstan/phpstan": "^0.9.2",
+        "phpunit/phpunit": "^7.0",
+        "sebastian/phpcpd": "^4.0",
+        "sensiolabs/security-checker": "^4.1"
     },
     "autoload": {
         "psr-4": {
@@ -55,6 +60,29 @@
     "prefer-stable": true,
     "config": {
         "sort-packages": true
+    },
+    "scripts": {
+        "ci": [
+            "@composer syntax-check",
+            "@composer validate --strict --no-check-lock",
+            "@composer security-checker",
+            "@composer phpcpd",
+            "@composer phpstan"
+        ],
+        "phpcpd": "./vendor/bin/phpcpd src/",
+        "phpstan": "./vendor/bin/phpstan analyse --level=4 src",
+        "security-checker": "./vendor/bin/security-checker security:check ./composer.lock --end-point=http://security.sensiolabs.org/check_lock",
+        "syntax-check": [
+            "./vendor/bin/parallel-lint --exclude vendor .",
+            "vendor/bin/phpcs"
+        ]
+    },
+    "scripts-descriptions": {
+        "ci": "Perform continuous integration tasks",
+        "phpcpd": "Detect copy/paste in source code",
+        "phpstan": "Analyze source code",
+        "security-checker": "Look for dependencies with known security vulnerabilities",
+        "syntax-check": "Check syntax of source code"
     },
     "archive": {
         "exclude": [
