--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,11 @@ install:
     # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
     - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
     - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
+    - npm install alex
 
 script:
+    # Check for insensitive language
+    - find ./src | ./node_modules/.bin/alex
     # Run all standard CI scripts
     - composer ci
     # Run PHPUnit
