Enforce up-to-date TravisCi

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: php
+
 sudo: false
+
 cache:
     directories:
         - $HOME/.composer/cache/files
+
+apt:
+  update: true
 
 env:
     global:
