Upgraded package versions
- Updated PHP version for Travis
- Require Alex as proper requirement
- Allowed blacklist/whitelist in Alex
- Updated CI command in composer.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# Folders
+/.idea/
+/var/
+/node_modules/
+/vendor/
+/tests/Functional/var/
+
+# Files
 /.phpcs-cache
 /composer.lock
+/yarn.lock
 /coverage.xml
 /phpunit.xml
-/.idea/
-/.phar/
-/vendor/
-/var/
-/tests/Functional/var/
