--- a/.travis.yml
+++ b/.travis.yml
@@ -17,27 +17,42 @@ matrix:
     fast_finish: true
     include:
           # Minimum supported dependencies with the latest and oldest PHP version
-        - php: 7.2
-          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
         - php: 7.1
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
-
-          # Test the latest stable release
-        - php: 7.1
         - php: 7.2
-          env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-clover=coverage.xml"
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
+        - php: 7.3
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
 
           # Test LTS versions
         - php: 7.2
           env: DEPENDENCIES="symfony/lts:^3"
+        - php: 7.2
+          env: DEPENDENCIES="symfony/lts:^4"
 
           # Latest commit to master
+        - php: 7.1
+          env: STABILITY="dev"
         - php: 7.2
           env: STABILITY="dev"
+        - php: 7.3
+          env: STABILITY="dev"
+
+          # Generate test coverage
+        - php: 7.2
+          env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-clover=coverage.xml"
+
+          # Test the latest stable release
+        - php: 7.1
+        - php: 7.2
+        - php: 7.3
 
     allow_failures:
           # Dev-master is allowed to fail.
         - env: STABILITY="dev"
+
+          # PHPCS-tool is not yet ready for PHP7.3
+        - php: 7.3
 
 before_install:
     - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
@@ -45,15 +60,11 @@ before_install:
     - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
 
 install:
-    # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
-    - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
     - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
-    - npm install alex
+    - yarn install
 
 script:
-    # Check for insensitive language
-    - find ./src | ./node_modules/.bin/alex
-    # Run all standard CI scripts
+    # Run all CI commands
     - composer ci
     # Run PHPUnit
     - ./vendor/bin/phpunit $PHPUNIT_FLAGS
