--- a/composer.json
+++ b/composer.json
@@ -25,25 +25,25 @@
         "issues": "https://github.com/ping-localhost/anonymizer-bundle/issues"
     },
     "require": {
-        "php":                          "^7.1.0",
-        "doctrine/annotations":         "^1.6.0",
-        "doctrine/cache":               "^1.8.0",
-        "doctrine/common":              "^2.9.0",
-        "fzaninotto/faker":             "^1.8.0",
-        "jms/metadata":                 "^1.6.0",
-        "symfony/dependency-injection": "^3.4.12|^4.0.11",
-        "symfony/framework-bundle":     "^3.4.12|^4.0.11",
-        "symfony/http-foundation":      "^3.4.14|^4.0.14|^4.1.3",
-        "symfony/yaml":                 "^3.4.12|^4.0.11"
+        "php": "^7.1.0",
+        "doctrine/annotations": "^1.6.0",
+        "doctrine/cache": "^1.8.0",
+        "doctrine/common": "^2.10.0",
+        "fzaninotto/faker": "^1.8.0",
+        "jms/metadata": "^1.7.0",
+        "symfony/dependency-injection": "^3.4.23|^4.2.4",
+        "symfony/framework-bundle": "^3.4.23|^4.2.4",
+        "symfony/http-foundation": "^3.4.23|^4.2.4",
+        "symfony/yaml": "^3.4.23|^4.2.4"
     },
     "require-dev": {
-        "hostnet/phpcs-tool":              "^8.2.0",
+        "hostnet/phpcs-tool": "^8.3.3",
         "jakub-onderka/php-parallel-lint": "^1.0.0",
-        "nyholm/symfony-bundle-test":      "^1.4.0",
-        "phpstan/phpstan":                 "^0.10.3",
-        "phpunit/phpunit":                 "^7.3.3",
-        "sebastian/phpcpd":                "^4.0.0",
-        "sensiolabs/security-checker":     "^4.1.8"
+        "nyholm/symfony-bundle-test": "^1.4.0",
+        "phpstan/phpstan": "^0.10.3",
+        "phpunit/phpunit": "^7.5.7",
+        "sebastian/phpcpd": "^4.1.0",
+        "sensiolabs/security-checker": "^5.0.3"
     },
     "conflict": {
         "paragonie/random_compat": "<2.0.0"
@@ -67,22 +67,25 @@
             "@composer validate --strict --no-check-lock",
             "@composer security-checker",
             "@composer phpcpd",
-            "@composer phpstan"
+            "@composer phpstan",
+            "@composer alex"
         ],
-        "phpcpd":           "./vendor/bin/phpcpd src/",
-        "phpstan":          "./vendor/bin/phpstan analyse --level=3 src",
-        "security-checker": "./vendor/bin/security-checker security:check ./composer.lock --end-point=http://security.sensiolabs.org/check_lock",
+        "alex": "./node_modules/.bin/alex",
+        "phpcpd": "./vendor/bin/phpcpd ./src",
+        "phpstan": "./vendor/bin/phpstan analyse --level=3 ./src",
+        "security-checker": "./vendor/bin/security-checker security:check ./composer.lock",
         "syntax-check": [
-            "./vendor/bin/parallel-lint --exclude vendor .",
+            "./vendor/bin/parallel-lint --exclude ./vendor .",
             "./vendor/bin/phpcs"
         ]
     },
     "scripts-descriptions": {
-        "ci":               "Perform continuous integration tasks",
-        "phpcpd":           "Detect copy/paste in source code",
-        "phpstan":          "Analyze source code",
+        "alex": "Check for insensitive language",
+        "ci": "Perform continuous integration tasks",
+        "phpcpd": "Detect copy/paste in source code",
+        "phpstan": "Analyze source code",
         "security-checker": "Look for dependencies with known security vulnerabilities",
-        "syntax-check":     "Check syntax of source code"
+        "syntax-check": "Check syntax of source code"
     },
     "config": {
         "sort-packages": true
