--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,11 @@
         "doctrine/common": "^2.10.0",
         "fzaninotto/faker": "^1.8.0",
         "jms/metadata": "^1.7.0",
-        "symfony/dependency-injection": "^3.4.23|^4.2.4",
-        "symfony/framework-bundle": "^3.4.23|^4.2.4",
-        "symfony/http-foundation": "^3.4.23|^4.2.4",
-        "symfony/yaml": "^3.4.23|^4.2.4"
+        "symfony/cache": "^3.4.26|^4.2.7",
+        "symfony/dependency-injection": "^3.4.26|^4.2.7",
+        "symfony/framework-bundle": "^3.4.26|^4.2.7",
+        "symfony/http-foundation": "^3.4.26|^4.2.7",
+        "symfony/yaml": "^3.4.26|^4.2.7"
     },
     "require-dev": {
         "hostnet/phpcs-tool": "^8.3.3",
@@ -43,7 +44,7 @@
         "phpstan/phpstan": "^0.11.5",
         "phpunit/phpunit": "^7.5.7",
         "sebastian/phpcpd": "^4.1.0",
-        "sensiolabs/security-checker": "^5.0.3"
+        "sensiolabs/security-checker": "^6.0.2"
     },
     "conflict": {
         "paragonie/random_compat": "<2.0.0"
